Update CSS styles for responsive layout and fix overflow issue

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,6 +46,8 @@
 
         grid-template-areas: 'content';
         grid-template-columns: 100%;
+
+        overflow-x: hidden;
     }
 
     .layout__menu-toggle{
@@ -87,7 +89,7 @@
         z-index: 1000;
         display: block;
         position: absolute;
-        max-width: 330px;
+        max-width: 33rem;
         top: 0;
         right: 0;
         bottom: 0;
